hide and show second paragraph

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
         
                 <div class="col-md-4">
-                  <div class="koe">
+                  <div class="k">
                     <img src="diane/product_icon.png" id="las"> 
                   
                     <h2>PRODUCT MANAGEMENT</h2>
@@ -106,6 +106,7 @@
                   <img src="diane/work8.jpg" height="240" width="290">
                 </div>
             </div>
+
             <div id="sp">
                 <img src="diane/twitter.png">
                 <img src="diane/dribble.png">
