hide and show third paragraph

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
         
                 <div class="col-md-4">
-                  <div class="k">
+                  <div class="koe">
                     <img src="diane/product_icon.png" id="las"> 
                   
                     <h2>PRODUCT MANAGEMENT</h2>
