adding first picture

--- a/index.html
+++ b/index.html
@@ -80,12 +80,14 @@
             <h1>PORTFOLIO</h1>
             <div class="row">
                 <div class="col-md-3">
+                    
                   <img src="diane/work4.jpg" height="240" width="290">
                 </div>
                 <div class="col-md-3">
                   <img src="diane/work3.jpg" height="240" width="290">
                 </div>
                 <div class="col-md-3">
+                        <p id="ve">version</p>
                   <img src="diane/work2.jpg" height="240" width="290">
                 </div>
                 <div class="col-md-3">
@@ -106,7 +108,16 @@
                   <img src="diane/work8.jpg" height="240" width="290">
                 </div>
             </div>
-
+            <div id="nano">
+              <h2>CONTACT US</h2>
+              <div id="cent">
+             <input type="text" placeholder="Name..." id="one">
+             <input type="text" placeholder="Email..." id="two">
+              <div id="cal">
+                <input type="text" placeholder="Your message here"  id="three">
+              </div>
+              </div>
+            </div>
             <div id="sp">
                 <img src="diane/twitter.png">
                 <img src="diane/dribble.png">
@@ -118,5 +129,6 @@
                 <img src="diane/pinterest.png">
                 <img src="diane/flickr.png">
             </div>
+            
         </body>
     </html>
