add the second picture for portifolio

--- a/index.html
+++ b/index.html
@@ -80,36 +80,58 @@
             <h1>PORTFOLIO</h1>
             <div class="row">
                 <div class="col-md-3">
-                    
-                  <img src="diane/work4.jpg" height="240" width="290">
+                    <div id="firt">
+                      <p id="va">mission</p>
+                      <img src="diane/work4.jpg" height="240" width="290" id="im1">
+                    </div> 
+                </div>
+                <!-- <div class="col-md-3">
+                    <div id="secn">
+                     <p id="vi">project</p>
+                     <img src="diane/work3.jpg" height="240" width="290" id="im2">
+                    </div>
                 </div>
                 <div class="col-md-3">
-                  <img src="diane/work3.jpg" height="240" width="290">
-                </div>
-                <div class="col-md-3">
+                    <div id="thr">
                         <p id="ve">version</p>
-                  <img src="diane/work2.jpg" height="240" width="290">
+                       <img src="diane/work2.jpg" height="240" width="290" id="im3">
+                   </div>
                 </div>
                 <div class="col-md-3">
-                  <img src="diane/work1.jpg" height="240" width="290">
+                  <div id="fort">
+                    <p id="vu">Supreme</p>
+                    <img src="diane/work1.jpg" height="240" width="290" id="im4">
+                  </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-3">
-                  <img src="diane/work5.jpg" height="240" width="290">
+                    <div id="fith">
+                        <p id="hi">NEWS</p>
+                        <img src="diane/work5.jpg" height="240" width="290" id="im5">
+                    </div>
                 </div>
                 <div class="col-md-3">
-                  <img src="diane/work6.jpg" height="240" width="290">
+                    <div id="sixh">
+                        <p id="TE">PROGRAME</p>
+                        <img src="diane/work6.jpg" height="240" width="290" id="im6">
+                    </div>
                 </div>
                 <div class="col-md-3">
-                  <img src="diane/work7.jpg" height="240" width="290">
+                    <div id="sevh">
+                        <p id="hu">Service</p>
+                        <img src="diane/work7.jpg" height="240" width="290" id="im7">
+                    </div>
                 </div>
                 <div class="col-md-3">
-                  <img src="diane/work8.jpg" height="240" width="290">
+                    <div id="eigh">
+                        <p id="ha"><strong>GIRRAFE</strong></p>
+                        <img src="diane/work8.jpg" height="240" width="290" id="im8">
+                    </div>
                 </div>
             </div>
             <div id="nano">
-              <h2>CONTACT US</h2>
+              <h3>CONTACT US</h3>
               <div id="cent">
              <input type="text" placeholder="Name..." id="one">
              <input type="text" placeholder="Email..." id="two">
@@ -117,6 +139,7 @@
                 <input type="text" placeholder="Your message here"  id="three">
               </div>
               </div>
+              <button type="button" id="bnt" onclick="$">Submit</button>
             </div>
             <div id="sp">
                 <img src="diane/twitter.png">
@@ -129,6 +152,9 @@
                 <img src="diane/pinterest.png">
                 <img src="diane/flickr.png">
             </div>
-            
+            <div id="foot">
+              <p>DELANI STUDIO<br>
+              2016 </p> -->
+            </div>
         </body>
     </html>
