add the third picture

--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
                       <img src="diane/work4.jpg" height="240" width="290" id="im1">
                     </div> 
                 </div>
-                <!-- <div class="col-md-3">
+                 <div class="col-md-3">
                     <div id="secn">
                      <p id="vi">project</p>
                      <img src="diane/work3.jpg" height="240" width="290" id="im2">
                     </div>
                 </div>
-                <div class="col-md-3">
+                 <div class="col-md-3">
                     <div id="thr">
                         <p id="ve">version</p>
                        <img src="diane/work2.jpg" height="240" width="290" id="im3">
                    </div>
-                </div>
-                <div class="col-md-3">
+                </div> 
+                <!--<div class="col-md-3">
                   <div id="fort">
                     <p id="vu">Supreme</p>
                     <img src="diane/work1.jpg" height="240" width="290" id="im4">
@@ -154,7 +154,7 @@
             </div>
             <div id="foot">
               <p>DELANI STUDIO<br>
-              2016 </p> -->
-            </div>
+              2016 </p> 
+            </div> -->
         </body>
     </html>
