add forth paragraph

--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
                        <img src="diane/work2.jpg" height="240" width="290" id="im3">
                    </div>
                 </div> 
-                <!--<div class="col-md-3">
+                <div class="col-md-3">
                   <div id="fort">
                     <p id="vu">Supreme</p>
                     <img src="diane/work1.jpg" height="240" width="290" id="im4">
                   </div>
                 </div>
-            </div>
+          <!--  </div>
             <div class="row">
                 <div class="col-md-3">
                     <div id="fith">
