putting 4 photos in one row

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                     <img src="diane/work1.jpg" height="240" width="290" id="im4">
                   </div>
                 </div>
-          <!--  </div>
-            <div class="row">
+           </div>
+           <!--  <div class="row">
                 <div class="col-md-3">
                     <div id="fith">
                         <p id="hi">NEWS</p>
