another 2  pictures added

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                   </div>
                 </div>
            </div>
-           <!--  <div class="row">
+            <div class="row">
                 <div class="col-md-3">
                     <div id="fith">
                         <p id="hi">NEWS</p>
@@ -117,7 +117,7 @@
                         <img src="diane/work6.jpg" height="240" width="290" id="im6">
                     </div>
                 </div>
-                <div class="col-md-3">
+               <!--  <div class="col-md-3">
                     <div id="sevh">
                         <p id="hu">Service</p>
                         <img src="diane/work7.jpg" height="240" width="290" id="im7">
