the last picture

--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
                         <img src="diane/work7.jpg" height="240" width="290" id="im7">
                     </div>
                 </div>
-              <!--   <div class="col-md-3">
+                <div class="col-md-3">
                     <div id="eigh">
                         <p id="ha"><strong>GIRRAFE</strong></p>
                         <img src="diane/work8.jpg" height="240" width="290" id="im8">
                     </div>
                 </div>
-            </div>
+           <!--  </div>
             <div id="nano">
               <h3>CONTACT US</h3>
               <div id="cent">
