--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
                         <img src="diane/work8.jpg" height="240" width="290" id="im8">
                     </div>
                 </div>
-           <!--  </div>
+            </div>
             <div id="nano">
               <h3>CONTACT US</h3>
               <div id="cent">
-             <input type="text" placeholder="Name..." id="one">
+             <!-- <input type="text" placeholder="Name..." id="one">
              <input type="text" placeholder="Email..." id="two">
               <div id="cal">
                 <input type="text" placeholder="Your message here"  id="three">
