--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
             <div id="nano">
               <h3>CONTACT US</h3>
               <div id="cent">
-             <!-- <input type="text" placeholder="Name..." id="one">
-             <input type="text" placeholder="Email..." id="two">
+              <input type="text" placeholder="Name..." id="one">
+            <!--  <input type="text" placeholder="Email..." id="two">
               <div id="cal">
                 <input type="text" placeholder="Your message here"  id="three">
               </div>
