--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
               <h3>CONTACT US</h3>
               <div id="cent">
               <input type="text" placeholder="Name..." id="one">
-            <!--  <input type="text" placeholder="Email..." id="two">
+              <input type="text" placeholder="Email..." id="two">
               <div id="cal">
-                <input type="text" placeholder="Your message here"  id="three">
+              <!--   <input type="text" placeholder="Your message here"  id="three">
               </div>
               </div>
               <button type="button" id="bnt" onclick="$">Submit</button>
