--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
               <input type="text" placeholder="Name..." id="one">
               <input type="text" placeholder="Email..." id="two">
               <div id="cal">
-              <!--   <input type="text" placeholder="Your message here"  id="three">
+                <input type="text" placeholder="Your message here"  id="three">
               </div>
               </div>
-              <button type="button" id="bnt" onclick="$">Submit</button>
+            <!--   <button type="button" id="bnt" onclick="$">Submit</button>
             </div>
             <div id="sp">
                 <img src="diane/twitter.png">
