--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
                 <input type="text" placeholder="Your message here"  id="three">
               </div>
               </div>
-            <!--   <button type="button" id="bnt" onclick="$">Submit</button>
+              <button type="button" id="bnt" onclick="$">Submit</button>
             </div>
-            <div id="sp">
+             <div id="sp">
                 <img src="diane/twitter.png">
                 <img src="diane/dribble.png">
                 <img src="diane/facebook.png">
@@ -152,7 +152,7 @@
                 <img src="diane/pinterest.png">
                 <img src="diane/flickr.png">
             </div>
-            <div id="foot">
+         <!--    <div id="foot">
               <p>DELANI STUDIO<br>
               2016 </p> 
             </div> -->
