--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
                 <img src="diane/pinterest.png">
                 <img src="diane/flickr.png">
             </div>
-         <!--    <div id="foot">
+            <div id="foot">
               <p>DELANI STUDIO<br>
               2016 </p> 
-            </div> -->
+            </div> 
         </body>
     </html>
