removing div he

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
          <!-- <div class="container"> -->
             <div class="header">
                     
-                <div id="he">
+                <!-- <div id="he"> -->
                     <img src="diane/logo.png" id="lo">
                     <h1>WELCOME<br>
                     TO DENALI STUDIOS</h1>
                     <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
-                </div>
+                <!-- </div> -->
                 <img src="diane/mouse_click.png" id="mou">
             </div>
             <h1>ABOUT US</h1>
